--- a/web-front-office/.env.production
+++ b/web-front-office/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BFF_BASE_PATH=https://openid-training.c4-soft.com
+NEXT_PUBLIC_BFF_BASE_PATH=https://web.front-office.openid-training.c4-soft.com
