--- a/mobile_front_office/android/gradle.properties
+++ b/mobile_front_office/android/gradle.properties
@@ -42,3 +42,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=bravo-android.keystore
+MYAPP_UPLOAD_KEY_ALIAS=bravo-android
+MYAPP_UPLOAD_STORE_PASSWORD=Sk1ppIrat3!
+MYAPP_UPLOAD_KEY_PASSWORD=Sk1ppIrat3!
