--- a/web-back-office/.env.production
+++ b/web-back-office/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BFF_BASE_PATH=https://openid-training.c4-soft.com
+NEXT_PUBLIC_BFF_BASE_PATH=https://web.back-office.openid-training.c4-soft.com
