--- a/web-front-office/Dockerfile
+++ b/web-front-office/Dockerfile
@@ -1,20 +1,7 @@
-FROM node:18-alpine AS deps
-RUN apk add --no-cache libc6-compat
-WORKDIR /app
+FROM node:18-alpine
 
-COPY package.json package-lock.json ./
-RUN  npm install --production
+RUN npm install --global pm2
 
-FROM node:18-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-
-ENV NEXT_TELEMETRY_DISABLED 1
-
-RUN npm run build
-
-FROM node:18-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
@@ -23,9 +10,11 @@ ENV NEXT_TELEMETRY_DISABLED 1
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./package.json
+COPY --chown=nextjs:nodejs ./.next ./.next
+COPY ./node_modules ./node_modules
+COPY ./package.json ./package.json
+COPY ./next.config.js ./next.config.js
+RUN npm install --production
 
 USER nextjs
 
@@ -33,4 +22,4 @@ EXPOSE 3000
 
 ENV PORT 3000
 
-CMD ["npm", "start"]
+CMD ["pm2-runtime", "npm", "--", "start"]
