--- a/mobile_front_office/package.json
+++ b/mobile_front_office/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.71.10",
+    "react-native-app-auth": "^6.4.3",
     "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
