--- a/mobile_front_office/android/app/build.gradle
+++ b/mobile_front_office/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
         versionCode 1
         versionName "1.0"
         manifestPlaceholders = [
-          'appAuthRedirectScheme': 'com.c4-soft.openid-training.front-office.mobile'
+          'appAuthRedirectScheme': 'com.c4-soft.openid-training.front-office.mobile.auth'
         ]
     }
 
