Fix email to UserRoles test formatter
(Formatters are used to turn @PathVariable and @RequestParam DTOs into
business objects like JPA entities)

--- a/backend/greetings-api/src/main/resources/application.yml
+++ b/backend/greetings-api/src/main/resources/application.yml
@@ -29,7 +29,8 @@ com:
           username-claim: $['https://c4-soft.com/user']['name']
           authorities:
           - path: $['https://c4-soft.com/authorities']
-          - path: $.permissions
+          - path: $.scope
+            prefix: SCOPE_
         permit-all:
         - "/greetings/**"
         - "/actuator/health/readiness"
