--- a/backend/bff/src/main/resources/application.yml
+++ b/backend/bff/src/main/resources/application.yml
@@ -137,6 +137,10 @@ com:
             uri: ${oauth2-issuer}v2/logout
             client-id-request-param: client_id
             post-logout-uri-request-param: returnTo
+          authorization-request-params:
+            authorization-code:
+            - name: audience
+              value: https://openid-training.c4-soft.com
         # OAuth2 resource server configuration
         csrf: disable
         statless-sessions: true
