--- a/backend/bff/src/main/resources/application.yml
+++ b/backend/bff/src/main/resources/application.yml
@@ -60,10 +60,10 @@ spring:
         uri: ${ui-host}
         predicates:
         - Path=/ui/**
-      - id: greetings-api
+      - id: greetings-resource-server
         uri: ${greetings-api-uri}
         predicates:
-        - Path=/api/v1/greetings/**
+        - Path=/resource-server/v1/greetings/**
         filters:
         - StripPrefix=2
       - id: greetings-bff
@@ -74,10 +74,10 @@ spring:
         - TokenRelay=
         - SaveSession
         - StripPrefix=2
-      - id: users-api
+      - id: users-resource-server
         uri: ${users-api-uri}
         predicates:
-        - Path=/api/v1/users/**
+        - Path=/resource-server/v1/users/**
         filters:
         - StripPrefix=2
         - RemoveRequestHeader=Origin
@@ -114,16 +114,15 @@ com:
           - /oauth2/**
           - /
           - /logout
-          - /bff/v1/**
+          - /bff/**
           permit-all:
           - /login/**
           - /oauth2/**
           - /
-          - /bff/v1/**
+          - /bff/**
           csrf: cookie-accessible-from-js
           post-login-redirect-path: /ui
           post-logout-redirect-path: /ui
-          back-channel-logout-enabled: true
           oauth2-logout:
             authorization-code:
               uri: ${oauth2-issuer}v2/logout
@@ -137,7 +136,7 @@ com:
         resourceserver:
           permit-all:
           - /ui/**
-          - /api/v1/**
+          - /resource-server/**
           - /v3/api-docs/**
           - /actuator/health/readiness
           - /actuator/health/liveness
