--- a/backend/bff/src/main/resources/application.yml
+++ b/backend/bff/src/main/resources/application.yml
@@ -50,14 +50,20 @@ spring:
         - Path=/
         filters:
         - RedirectTo=301,${gateway-uri}/ui
+      - id: redirect-to-app
+        uri: ${ui-host}
+        predicates:
+        - Path=/app
+        filters:
+        - RedirectTo=301,${ui-host}/ui
       - id: ui
         uri: ${ui-host}
         predicates:
         - Path=/ui/**
-      - id: greetings-api
+      - id: greetings-resource-server
         uri: ${greetings-api-uri}
         predicates:
-        - Path=/api/v1/greetings/**
+        - Path=/resource-server/v1/greetings/**
         filters:
         - StripPrefix=2
       - id: greetings-bff
@@ -68,10 +74,10 @@ spring:
         - TokenRelay=
         - SaveSession
         - StripPrefix=2
-      - id: users-api
+      - id: users-resource-server
         uri: ${users-api-uri}
         predicates:
-        - Path=/api/v1/users/**
+        - Path=/resource-server/v1/users/**
         filters:
         - StripPrefix=2
         - RemoveRequestHeader=Origin
@@ -91,17 +97,15 @@ spring:
 com:
   c4-soft:
     springaddons:
-      security:
+      oidc:
         # Global OAuth2 configuration
-        issuers:
-        - location: ${oauth2-issuer}
+        ops:
+        - iss: ${oauth2-issuer}
           username-claim: $['https://c4-soft.com/user']['name']
           authorities:
           - path: $['https://c4-soft.com/authorities']
           - path: $.scope
             prefix: SCOPE_
-        cors:
-        # OAuth2 client configuration
         client:
           cors:
           client-uri: ${gateway-uri}
@@ -110,37 +114,33 @@ com:
           - /oauth2/**
           - /
           - /logout
-          - /api/v1/**
-          - /bff/v1/**
-          - /ui/**
+          - /bff/**
           permit-all:
           - /login/**
           - /oauth2/**
           - /
-          - /api/v1/**
-          - /bff/v1/**
-          - /ui/**
+          - /bff/**
           csrf: cookie-accessible-from-js
           post-login-redirect-path: /ui
           post-logout-redirect-path: /ui
-          back-channel-logout-enabled: true
           oauth2-logout:
-          - client-registration-id: authorization-code
-            uri: ${oauth2-issuer}v2/logout
-            client-id-request-param: client_id
-            post-logout-uri-request-param: returnTo
+            authorization-code:
+              uri: ${oauth2-issuer}v2/logout
+              client-id-request-param: client_id
+              post-logout-uri-request-param: returnTo
           authorization-request-params:
             authorization-code:
             - name: audience
               value: openid-training.c4-soft.com
         # OAuth2 resource server configuration
-        csrf: disable
-        statless-sessions: true
-        permit-all:
-        - /v3/api-docs/**
-        - /actuator/health/readiness
-        - /actuator/health/liveness
-        - /.well-known/acme-challenge/**
+        resourceserver:
+          permit-all:
+          - /ui/**
+          - /resource-server/**
+          - /v3/api-docs/**
+          - /actuator/health/readiness
+          - /actuator/health/liveness
+          - /.well-known/acme-challenge/**
             
 management:
   endpoint:
